--- a/about/travel/index.html
+++ b/about/travel/index.html
@@ -10,11 +10,10 @@
   <meta property="og:url" content="http://pearlhacks.com/about/travel" />
 	<meta property="og:description" content="Pearl Hacks travel grant information." />
 	<meta property="og:updated_time" content="1439328118" />
-	<link rel="icon" href="../../ariel.png" type="image/x-icon" />
 	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 	<title>Travel grants for Pearl Hacks</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<link rel="icon" href="../../images/ariel.png" type="image/png">
+	<link rel="icon" href="../../images/pearlhacksicon.png" type="image/png">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 	<!--Import bootstrap.css-->
 	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
@@ -74,18 +73,20 @@
 						</ul>
 						</li>
 						<li>
-							<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 								Register<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu">
 							<li><a href="../../apply/participant.html" target="_blank">Participant</a></li>
 							<li><a href="../../apply/volunteer.html" target="_blank">Volunteer</a></li>
 							<li><a href="../../apply/mentor.html" target="_blank">Mentor</a></li>
-							</ul>-->
-							<a href="../../apply/participant.html">Register</a>
+						</ul>
 						</li>
 						<li>
 							<a href="../../learn/index.html">Learn</a>
+						</li>
+						<li>
+							<a href="../../schedule/index.html">Schedule</a>
 						</li>
 						<!--<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -124,11 +125,11 @@
 			<p>How do I make it to Pearl Hacks 2017?</p>
 		</div>
 	</div>
-	
+
 	<div class="container" style="width:100%">
 		<div class="leftHeader teal">
 			<h2><strong>Location and Parking</strong></h2>
-		</div>	
+		</div>
 		<div class="row welcome">
 			<div class="col-xs-12">
 				<p>Come back in the future for more information!</p>
@@ -175,7 +176,7 @@
 					<h2><strong>Charter Buses</strong></h2>
 				</div>
 				<p>We will be offering buses this year! We will have 3 buses that will be picking people up in Florida, Georiga, Virginia,
-				    Maryland, Pennsylvania, New Jersey and New York. Specific stops and more information will be out once routes are finalized. Bus signup 
+				    Maryland, Pennsylvania, New Jersey and New York. Specific stops and more information will be out once routes are finalized. Bus signup
 					emails will be sent out to eligible participants around mid-January. </p>
 			</div>
 			<div class="col-xs-12 col-sm-6">
@@ -183,17 +184,17 @@
 					<h2><strong>Flights</strong></h2>
 				</div>
 				<p>We will be offering flight reimbursements on a first come first serve basis with the amount reimbursed
-			   dependent on where you are traveling from. 
-					If you are traveling from the West Coast or Canada, the maximum amount we are able to 
-			   reimburse will be $400. 
-			   		If you are traveling from anywhere else in the US, the maximum amount we are able to 
-			   reimburse will be $300. 
+			   dependent on where you are traveling from.
+					If you are traveling from the West Coast or Canada, the maximum amount we are able to
+			   reimburse will be $400.
+			   		If you are traveling from anywhere else in the US, the maximum amount we are able to
+			   reimburse will be $300.
 					We are not able to offer flight reimbursements to participants from places that we are sending a bus to.
-					
-					Lastly, we will be sending emails out weekly to notify participants of their eligibility for 
-					flight reimbursements so if you've already signed up, be on the lookout for that email! 
-			   
-			   If you have any questions about the process, 
+
+					Lastly, we will be sending emails out weekly to notify participants of their eligibility for
+					flight reimbursements so if you've already signed up, be on the lookout for that email!
+
+			   If you have any questions about the process,
 			   please email us at hello@pearlhacks.com</p>
 			</div>
 		</div>
