--- a/learn/index.html
+++ b/learn/index.html
@@ -13,7 +13,7 @@
 	<meta property="og:updated_time" content="1439328118" />
 	<title>Learning at Pearl Hacks</title>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<link rel="icon" href="../images/ariel.png" type="image/png">
+	<link rel="icon" href="../images/pearlhacksicon.png" type="image/png">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 	<!--Import bootstrap.css-->
 	<link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
@@ -62,18 +62,20 @@
 						</ul>
 						</li>
 						<li>
-							<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 								Register<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu">
 							<li><a href="../apply/participant.html" target="_blank">Participant</a></li>
 							<li><a href="../apply/volunteer.html" target="_blank">Volunteer</a></li>
 							<li><a href="../apply/mentor.html" target="_blank">Mentor</a></li>
-							</ul>-->
-							<a href="../apply/participant.html">Register</a>
+						</ul>
 						</li>
 						<li>
 							<a href="">Learn</a>
+						</li>
+						<li>
+							<a href="../schedule/index.html">Schedule</a>
 						</li>
 						<!--<li>
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -182,7 +184,7 @@
 			</div>
 			<div class="col-xs-12 col-md-6">
 				<div class="leftHeader purple">
-					<h2><strong>Android App 
+					<h2><strong>Android App
 						<br>Development</strong></h2>
 				</div>
 				<p>You can develop for Android with Java, so those of you who know it have a head start! Even if you don't know Java, making an Android app can be fun and easy, and in the end you will have an awesome working app! Here are tutorials on Android development.</p>
