--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 							<li>
 								<a href="./learn/index.html">Learn</a>
 							</li>
+							<li>
+								<a href="./schedule/index.html">Schedule</a>
+							</li>
 							<!--<li>
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 								Schedule <span class="caret"></span>
