--- a/index.html
+++ b/index.html
@@ -68,15 +68,14 @@
 							</ul>
 							</li>
 							<li>
-								<!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 									Register<span class="caret"></span>
 								</a>
 								<ul class="dropdown-menu">
 								<li><a href="./apply/participant.html" target="_blank">Participant</a></li>
 								<li><a href="./apply/volunteer.html" target="_blank">Volunteer</a></li>
 								<li><a href="./apply/mentor.html" target="_blank">Mentor</a></li>
-								</ul>-->
-								<a href="./apply/participant.html">Register</a>
+								</ul>
 							</li>
 							<li>
 								<a href="./learn/index.html">Learn</a>
