--- a/schedule/index.html
+++ b/schedule/index.html
@@ -40,6 +40,8 @@
 	tr {
 		height: 2.5em;
 	}
+	@media handheld { table { width: 100%; } }
+	@media screen { table { width: 60%; } }
 
 	</style>
 </head>
@@ -127,7 +129,7 @@
 			<h2><strong>Saturday</strong></h2>
 		</div>
 		<div class="row welcome" style="padding-left:20px;">
-		<table width="60%">
+		<table>
 			<col width="25%">
   		<col width="25%">
 			<col width="40%">
@@ -192,7 +194,7 @@
 			<h2><strong>Sunday</strong></h2>
 		</div>
 		<div class="row welcome" style="padding-left:20px;">
-		<table width="60%">
+		<table>
 			<col width="25%">
   		<col width="25%">
 			<col width="40%">
