--- a/about/travel/index.html
+++ b/about/travel/index.html
@@ -132,7 +132,24 @@
 		</div>
 		<div class="row welcome">
 			<div class="col-xs-12">
-				<p>Come back in the future for more information!</p>
+				<p>Pearl Hacks will be held in Sitterson Hall, Chapman Hall, 
+					and Carroll Hall on the campus of UNC Chapel Hill. 
+					The address of our venue is:</p>
+				<address>
+  					201 S. Columbia Street<br>
+  					Chapel Hill, NC 27599<br>
+  					</address>
+				<p>Free parking is available within easy walking distance of Pearl Hacks beginning 
+					at <b>5:00pm</b> 
+					Friday afternoon if you choose to arrive early. Please make sure you are not parking 
+					in any restricted areas! </p>
+				<ul class="parking">
+							<li><a href="https://www.google.com/maps/dir/35.9095348,-79.052167/35.9097177,-79.0527597/@35.9086153,-79.0552597,17z/data=!4m2!4m1!3e2">Venable Parking Lot</a></li>
+							<li><a href="https://www.google.com/maps/dir/Bell+Tower+Parking+Deck,+Chapel+Hill,+NC+27514,+United+States/35.9097032,-79.0527534/@35.9085196,-79.0539276,17z/data=!4m9!4m8!1m5!1m1!1s0x89acc2eedc3bd00f:0x2dd3a16fc7f5b0c9!2m2!1d-79.0500869!2d35.9067152!1m0!3e2">Bell Tower Parking Deck</a></li>
+							<!-- <li><a href="https://www.google.com/maps/dir/Department+of+Computer+Science,+Chapel+Hill,+NC+27514/Cobb+Parking+Deck,+Chapel+Hill,+NC+27514/@35.9107855,-79.0515577,17z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x89acc2e89e40c0c1:0x38fa53cf078c0e56!2m2!1d-79.0531119!2d35.9097319!1m5!1m1!1s0x89acc2ea68ddf24b:0x38f6620f02eadfae!2m2!1d-79.0456262!2d35.9117533!3e2">Cobb Parking Deck</a></li>
+							<li><a href="https://www.google.com/maps/dir/35.9086992,-79.0555626/35.9097177,-79.0527597/@35.9095276,-79.0560474,18z/data=!4m2!4m1!3e2">Nash Parking Lot</a></li> -->
+							<li><a href="https://www.google.com/maps/dir/35.9077494,-79.0538099/35.9097177,-79.0527597/@35.9087812,-79.0552089,17z/data=!4m2!4m1!3e2">FedEx Global Education Center Parking Deck</a></li>
+						</ul>
 			</div>
 		</div>
 		<div class="leftHeader purple">
