--- a/schedule/index.html
+++ b/schedule/index.html
@@ -246,6 +246,7 @@
 		</table>
 	</div>
 	</div>
+	<span style="padding-left:40px; color:white; padding-bottom:50px;">*Schedule is subject to change</span>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<!-- Google Analytics -->
 	<script type="text/javascript">
