take away the word university from ga tech

--- a/about/travel/index.html
+++ b/about/travel/index.html
@@ -142,8 +142,8 @@
 		</div>
 		<div class="row welcome">
 			<div class="col-xs-12">
-				<p>Pearl Hacks will be held in Sitterson Hall, Chapman Hall, 
-					and Carroll Hall on the campus of UNC Chapel Hill. 
+				<p>Pearl Hacks will be held in Sitterson Hall, Chapman Hall,
+					and Carroll Hall on the campus of UNC Chapel Hill.
 					The address of our venue is:</p>
 				<ul class="address">
 					<address>
@@ -151,9 +151,9 @@
   						Chapel Hill, NC 27599<br>
   						</address>
   				</ul>
-				<p>Free parking is available within easy walking distance of Pearl Hacks beginning 
-					at <b>5:00pm</b> 
-					Friday afternoon if you choose to arrive early. Please make sure you are not parking 
+				<p>Free parking is available within easy walking distance of Pearl Hacks beginning
+					at <b>5:00pm</b>
+					Friday afternoon if you choose to arrive early. Please make sure you are not parking
 					in any restricted areas! </p>
 				<ul class="parking">
 							<li><a href="https://www.google.com/maps/dir/35.9095348,-79.052167/35.9097177,-79.0527597/@35.9086153,-79.0552597,17z/data=!4m2!4m1!3e2">Venable Parking Lot</a></li>
@@ -208,7 +208,7 @@
 				<ul class="busroutes">
 					<li>New York University -> Rutgers - New Brunswick -> University of Pennsylvania</li>
 					<li>University of Maryland - College Park -> Howard University -> University of Virginia</li>
-					<li>Florida State University -> University of Florida -> Georgia Tech University</li>
+					<li>Florida State University -> University of Florida -> Georgia Tech</li>
 
 				</ul>
 				<p>Bus signups have been sent out already, but it's not too late to still register! We will still consider you as long as there is room on the bus. If you have questions regarding buses and signups, please email hello@pearlhacks.com</p>
@@ -217,8 +217,8 @@
 				<div class="leftHeader pink">
 					<h2><strong>Flights</strong></h2>
 				</div>
-				<p>We are sorry to say that we have run out of funds for flight reimbursements since we have received so many requests! We will not be able to reimburse anymore flights from now on. 
-				Again, we are so incredibly sorry about this! 
+				<p>We are sorry to say that we have run out of funds for flight reimbursements since we have received so many requests! We will not be able to reimburse anymore flights from now on.
+				Again, we are so incredibly sorry about this!
 			   If you have any questions,
 			   please email us at hello@pearlhacks.com</p>
 			</div>
