--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 		text-decoration: none;
 		font-weight: bold;
 	}
+	#demo {
+		text-align: center;
+		color: #DB8385;
+		font-weight: bold;
+	}
 	</style>
 </head>
 
@@ -125,6 +130,39 @@
 	</div>
 	<center><span style="font-size:1.5em;"><strong>February 11th - 12th, 2017</strong></span></center>
 	<center><span style="font-size:1em;"><strong>University of North Carolina at Chapel Hill</strong></span></center><br>
+	<!-- Display the countdown timer in an element -->
+<p id="demo"></p>
+
+<script>
+// Set the date we're counting down to
+var countDownDate = new Date("Feb 11, 2017 8:00:00").getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get todays date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now an the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";
+
+  // If the count down is finished, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
 	<div class="jumbotron">
 		<div class="leftHeader teal">
 			<h2><strong>Welcome to Pearl Hacks!</strong></h2>
